--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
-<a href="3DS/index.html">3DS</a>
+<a href="3DS/index.html">3DS</a><br/>
+<a href="minecraft">minecraft</a><br/>
 </body>
 </html>
