Slap on some CSS to control image size.

--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -2,6 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Papa Birl on Minecraft strangeness: biome switching</title>
+<style>
+  img {width:800px;}
+</style>
 </head>
 
 <body>
