--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -3,12 +3,26 @@
 <head>
 <title>Papa Birl on Minecraft strangeness: biome switching</title>
 <style>
-  img {width:800px;}
+  img {width:700px;}
 </style>
 </head>
 
 <body>
+Can this be explained?
 <img src="2020-12-03_08.21.42_PC.png">
 <img src="2020-12-03_08.26.23_Linux.png">
+<br/><br/>
+The image on the left is from my PC connected as a client over to my Linux machine.  The image on the right is the Linux machine hosting the world.<br/>
+(Although my PC is newer and more powerful, I sometimes get lazy and just play directly on the Linux machine.)<br/><br/>
+
+As you can see the screenshots are nearly identical:
+<ul>
+  <li>Same versions of Minecraft (different hardware and Java versions).</li>
+  <li>Same data files.</li>
+  <li>Same coordinates.</li>
+  <li>Different biomes reported.</li>
+</ul>
+
+About two weeks prior, I reported something similar as a potential bug (https://bugs.mojang.com/browse/MC-205643) because I would notice, on the PC, the changing of the biome names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to that difference between PC and Linux until now.
 </body>
 </html>
