--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-Can this be explained?
+<h2>Can this be explained?</h2>
+
 <img src="2020-12-03_08.21.42_PC.png">
 <img src="2020-12-03_08.26.23_Linux.png">
 <br/><br/>
@@ -23,6 +24,9 @@ As you can see the screenshots are nearly identical:
   <li>Different biomes reported.</li>
 </ul>
 
-About two weeks prior, I reported something similar as a potential bug (https://bugs.mojang.com/browse/MC-205643) because I would notice, on the PC, the changing of the biome names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to that difference between PC and Linux until now.
+About two weeks prior, I reported something similar as a potential bug
+(<a href="https://bugs.mojang.com/browse/MC-205643" target="_blank">https://bugs.mojang.com/browse/MC-205643</a>) because I would notice, on the PC, the changing of the biome 
+names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to that 
+difference between PC and Linux until now.
 </body>
 </html>
