--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -8,17 +8,22 @@
 </head>
 
 <body>
+2020-Dec-03. <a href="/minecraft/">minecraft</a>
+<br/><br/>
+
 <h2>Can this be explained?</h2>
 
 <img src="2020-12-03_08.21.42_PC.png">
 <img src="2020-12-03_08.26.23_Linux.png">
 <br/><br/>
+
 The image on the left is from my PC connected as a client over to my Linux machine.  The image on the right is the Linux machine hosting the world.<br/>
 (Although my PC is newer and more powerful, I sometimes get lazy and just play directly on the Linux machine.)<br/><br/>
 
 As you can see the screenshots are nearly identical:
 <ul>
   <li>Same versions of Minecraft (different hardware and Java versions).</li>
+  <li>Same account, but only the PC <b>OR</b> the Linux is actively playing in the world.</li>
   <li>Same data files.</li>
   <li>Same coordinates.</li>
   <li>Different biomes reported.</li>
