--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -33,5 +33,15 @@ About two weeks prior, I reported something similar as a potential bug
 (<a href="https://bugs.mojang.com/browse/MC-205643" target="_blank">https://bugs.mojang.com/browse/MC-205643</a>) because I would notice, on the PC, the changing of the biome 
 names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to that 
 difference between PC and Linux until now.
+<br/><br/>
+
+So my questions are:
+<ol>
+  <li>Why is there a discrepancy with the biomes between computers?</li>
+  <li>Which biome information should I trust?</li>
+  <dd>The reason for this question is because I am strip-mining the Mushroom biome (where my homebase is).  I do not want to expose my underground to hostile mobs, so I dig as
+  up against the border of the biomes.</dd>
+</ol>
+
 </body>
 </html>
