--- a/minecraft/strangeness/biome-switching/index.html
+++ b/minecraft/strangeness/biome-switching/index.html
@@ -31,16 +31,21 @@ As you can see the screenshots are nearly identical:
 
 About two weeks prior, I reported something similar as a potential bug
 (<a href="https://bugs.mojang.com/browse/MC-205643" target="_blank">https://bugs.mojang.com/browse/MC-205643</a>) because I would notice, on the PC, the changing of the biome 
-names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to that 
-difference between PC and Linux until now.
+names as I went up and down the Y-axis in a straight line.  If I played that same world in Linux, the biomes did not change along the Y-axis.  I didnt really pay attention to
+that difference between PC and Linux until now.
 <br/><br/>
 
 So my questions are:
 <ol>
-  <li>Why is there a discrepancy with the biomes between computers?</li>
+  <li>Why is there a discrepancy with the biomes between computers?  (Why even switch biomes along the Y-axis in the first place?!)</li>
   <li>Which biome information should I trust?</li>
-  <dd>The reason for this question is because I am strip-mining the Mushroom biome (where my homebase is).  I do not want to expose my underground to hostile mobs, so I dig as
-  up against the border of the biomes.</dd>
+  <dd>The reason for this question is because I am strip-mining the Mushroom biome (where my homebase is).  I do not want to expose my underground to hostile mobs, so I dig 
+  up against the border of the biomes.  This leads me to un-answered question I posted as a comment in MC-205643:</dd>
+  <li>If the biome is not Mushroom, could a mob spawn mid-air?</li>
+  <dd>At Y=5 if the reported biome is not Mushroom, I wall it up and move on (as seen on the right-side of the screenshots).  But if Y=5 and Y=7 are open-air Mushroom, while Y=6
+  is open-air non-Mushroom, could something a mob spawn and fall down to Y=5?</dd>
+  <dd>Or look at from the POV of the above screenshots:  I am standing at -555,7,-361. It could be ocean or mushroom, but -555,8,-361 and -555,9,-361 are open-air.  Could a mob 
+  spawn at Y=7?</dd>
 </ol>
 
 </body>
