--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe>
+<!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
 <a href="strangeness/">minecraft strangeness</a>
 </body>
 </html>
