Changed robots meta tag to allow archive.

--- a/3DS/Lord_of_Magna.html
+++ b/3DS/Lord_of_Magna.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Papa Birl's Guide to Lord of Magna: Maiden Heaven</title>
-<meta name="robots"             content="Follow, Index, NoArchive">
+<meta name="robots"             content="Follow, Index, Archive">
 <meta name="keywords"           content="Lord of Magna, Birl, Ogal Finklestein">
 <meta name="description"        content="Papa Birl's Guide to Lord of Magna: Maiden Heaven 2018-Sep-17.">
 
