--- a/3DS/Lord_of_Magna.html
+++ b/3DS/Lord_of_Magna.html
@@ -277,9 +277,9 @@ var dbug=document.getElementById("jsd");
 <div id="jsd" style="border:solid 1px #000; padding:2px; display:none;"></div>
 <table border="0" cellpadding="3" cellspacing="0" id="craft_table">
 <thead class="stick">
-<td id="trows"></td><td style="text-align:right">Colors:</td><td class="b" style="text-align:center;">Good result</td><td class="u" style="text-align:center;">to test</td><td colspan="1" class="g" style="text-align:center;">Great result</td></tr>
+<td id="trows"></td><td style="text-align:right">Colors:</td><td class="b" style="text-align:center;">Good result</td><td class="u" style="text-align:center;">to test</td><td colspan="1" class="g" style="text-align:center;">Great result</td><td>&nbsp;</td></tr>
 <th onclick="sortTable(0)" alt="sort">Material 1</th><th onclick="sortTable(1)" alt="sort">Material 2</th><th onclick="sortTable(2)" alt="sort">Result 1</th><th onclick="sortTable(3)" alt="sort">Result 2</th><th onclick="sortTable(4)" alt="sort">Result 3</th><td>sortable columns</td><tr/>
-<td colspan="5" class="note"><i>When attempting to craft an item with more than one result, always save your progress first.</i></td>
+<td colspan="5" class="note"><i>When attempting to craft an item with more than one result, always save your progress first.</i></td><td>&nbsp;</td>
 </thead><tr/>
 <tbody>
 <tr><td>Abyss Fragment</td>     <td>Heat Cluster</td>           <td class=" ">Magnetite Shard</td>      <td class=" ">Ruby Hairpin</td>         <td class=" ">Neuro Blast</td></tr>
