--- a/minecraft/strangeness/index.html
+++ b/minecraft/strangeness/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <a href="biome-switching/">biome switching</a>: Screenshots of the same data files, but depending on which Minecraft is running (Linux or PC),
-the biome changes at the same X-Y-Z corrodinates.  Why?
+the biome changes at the same X-Y-Z corrodinates.  Why? (<a href="https://www.reddit.com/r/Minecraft/comments/k5zr66/can_someone_explain_this/">Reddit</a>).
 <br/><br/>
 <a href="Minecraft_Java_1.16.4__sliding_booty-scooty_wolf_dog_2020-12-23_0745_scaled_no_audio.mp4">Vidcap of the sliding (booty-scooty) Minecraft wolf/dog.</a>
 <br/><br/>
