--- a/minecraft/strangeness/index.html
+++ b/minecraft/strangeness/index.html
@@ -5,11 +5,12 @@
 </head>
 
 <body>
-<a href="biome-switching/">biome switching</a>: Screenshots of the same data files, but depending on which Minecraft is running (Linux or PC),
-the biome changes at the same X-Y-Z corrodinates.  Why? (<a href="https://www.reddit.com/r/Minecraft/comments/k5zr66/can_someone_explain_this/">Reddit</a>).
+<a href="https://github.com/OgalFinklestein/minecraft/tree/master/Linux_Java_Edition/1.16">Seed: -1856138859406263879</a>
+<dd><a href="biome-switching/">biome switching</a>: Screenshots of the same data files, but depending on which Minecraft is running (Linux or PC),
+the biome changes at the same X-Y-Z corrodinates.  Why? (<a href="https://www.reddit.com/r/Minecraft/comments/k5zr66/can_someone_explain_this/">Reddit</a>).</dd>
 <br/><br/>
-<a href="Minecraft_Java_1.16.4__sliding_booty-scooty_wolf_dog_2020-12-23_0745_scaled_no_audio.mp4">Vidcap of the sliding (booty-scooty) Minecraft wolf/dog.</a>
+<dd><a href="Minecraft_Java_1.16.4__sliding_booty-scooty_wolf_dog_2020-12-23_0745_scaled_no_audio.mp4">Vidcap of the sliding (booty-scooty) Minecraft wolf/dog.</a></dd>
 <br/><br/>
-  
+
 </body>
 </html>
