--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
+Website of games that Papa Birl plays.<br/>
 <a href="3DS/index.html">3DS</a><br/>
+<a href="android">Android</a><br/>
 <a href="minecraft">minecraft</a><br/>
+
 </body>
 </html>
