--- a/3DS/index.html
+++ b/3DS/index.html
@@ -170,7 +170,7 @@ Nintendo <font style="color:#F00;">3</font><font style="color:#000;">DS</font>
                 <td width="300">Return to PoPoLoCrois</td>                                              <td></td> <tr/>
                 <td width="300"><a href="Lord_of_Magna.html">Lord of Magna: Maiden Heaven</a></td>      <td></td> <tr/>
                 <td width="300">&nbsp;</td>                                                             <td>&nbsp;</td> <tr/>
-                <td width="300">Android</td>                                                            <td>Fire Emblem: Heroes, Dr.  Mario World</td>
+                <td width="300">Android</td>                                                            <td><a href="~/android/Fire_Emblem_Heroes.html">Fire Emblem: Heroes</a>, Dr.  Mario World</td>
                 </table>
         </div>
 </div>
