--- a/android/Fire_Emblem_Heroes.html
+++ b/android/Fire_Emblem_Heroes.html
@@ -3,7 +3,7 @@
 <title>Papa Birl &amp; Fire Emblem: Heroes</title>
 <meta name="robots"             content="Follow, Index, NoArchive">
 <meta name="keywords"           content="Papa Birl, Fire Emblem: Heroes, Ogal Finklestein">
-<meta name="description"        content="Papa Birl and FIre Emblem Heroes.  2021-Mar-17.">
+<meta name="description"        content="Papa Birl and Fire Emblem Heroes.  2021-Mar-17.">
 <meta name="author"             content="S.A. Birl">
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -23,8 +23,12 @@ img   { height:800px; }
 <body>
 Friend ID: 32 52 22 32 29<br/><br/>
 
-<img src="/images/Fire_Emblem_Heroes_Papa_Birl_Summoner_Avatar_2021.jpg" />
-<img src="/images/Fire_Emblem_Heroes_Papa_Birl_Camilla_2021.jpg" />
-
+Ive been playing FEH since the first day it was released back in 2017, and Ive rarely missed a day.<br/>
+Camilla, my favorite lady from Fates, was my first 5-star summon in Heroes.  Luckily, Ive been blessed to summon her an additional 10 more times to make her a +10.<br/>
+My Aether Resort, as known (at least in my mind) as, "Camilla Heaven" has every version of in-game Camilla flying around.
+<br/>
+<img src="/images/Fire_Emblem_Heroes_Papa_Birl_Summoner_Avatar_2021.jpg" alt="Papa Birl's Summoner Avatar from 'Fire Emblem: Heroes'." />
+<img src="/images/Fire_Emblem_Heroes_Papa_Birl_Camilla_2021.jpg" alt="Papa Birl's waifu version of 'Bewitching Beauty' Camilla from 'Fire Emblem: Heroes'." />
+<img src="/images/Fire_Emblem_Heroes_Aether_Resort_Papa_Birl_Camilla_Heaven_2021.jpg" alt="Papa Birl's Aether Resort, 'Camilla Heaven', from 'Fire Emblem: Heroes'." />
 </body>
 </html>
