--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 </head>
 
 <body>
-Website of games that Papa Birl plays.<br/>
+A website listing games that Papa Birl plays.<br/>
 <a href="3DS/index.html">3DS</a><br/>
 <a href="android">Android</a><br/>
 <a href="minecraft">minecraft</a><br/>
+<br/>
+
+gmail: Ogal.Finklestein
 
 </body>
 </html>
