add link to seeds

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -7,5 +7,6 @@
 <body>
 <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
 <a href="strangeness/">minecraft strangeness</a>
+Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a>
 </body>
 </html>
