more minor HTML updates

--- a/minecraft/strangeness/index.html
+++ b/minecraft/strangeness/index.html
@@ -10,11 +10,11 @@
 the biome changes at the same X-Y-Z corrodinates.  Why? (<a href="https://www.reddit.com/r/Minecraft/comments/k5zr66/can_someone_explain_this/">Reddit</a>).</dd>
 <br/>
 <dd><a href="Minecraft_Java_1.16.4__sliding_booty-scooty_wolf_dog_2020-12-23_0745_scaled_no_audio.mp4">Vidcap of the sliding (booty-scooty) Minecraft wolf/dog.</a></dd>
-<dd><a href="2021-01-30_13.40.45.gif">Water and lava, living side-by-side, together in perfect harmony.</a></dd><br/>
-<dd><a href="2021-02-16_20-30-45.gif">Two nitwits sliding off the bed to fetch a carrot.</a></dd><br/> 
-<dd><a href="2021-02-20_21-12-20.gif">Seems I taught a panda how to row the boat.</a></dd><br/>
-<dd><a href="2021-03-19_07-54-34.gif">Floating vines I spotted.</a></dd><br/>
-<dd><a href="2021-03-24_19-35-25.gif">Hummingbird disguised as a bee.</a></dd><br/>
+<dd><a href="2021-01-30_13.40.45.gif">Water and lava, living side-by-side, together in perfect harmony.</a></dd>
+<dd><a href="2021-02-16_20-30-45.gif">Two nitwits sliding off the bed to fetch a carrot.</a></dd>
+<dd><a href="2021-02-20_21-12-20.gif">Seems I taught a panda how to row the boat.</a></dd>
+<dd><a href="2021-03-19_07-54-34.gif">Floating vines I spotted.</a></dd>
+<dd><a href="2021-03-24_19-35-25.gif">Hummingbird disguised as a bee.</a></dd>
 
 </body>
 </html>
