Updated HTML code

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -5,8 +5,11 @@
 </head>
 
 <body>
+<a href="..">..</a>
+<br/><br/>
 <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
-<a href="strangeness/">minecraft strangeness</a>
-Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a>
+<a href="strangeness/">minecraft strangeness</a><br/>
+Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
+<a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb">All of my screenshots for Minecraft</a><br/>
 </body>
 </html>
