Add Hypixel profile

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -8,6 +8,7 @@
 <a href="..">..</a>
 <br/><br/>
 <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
+<a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f">My Hypixel profile</a><br/>
 <a href="strangeness/">minecraft strangeness</a><br/>
 Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
 <a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb">All of my screenshots for Minecraft</a><br/>
