--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -9,6 +9,7 @@
 <br/><br/>
 <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
 <a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f">My Hypixel profile</a><br/>
+  <dd><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange">SkyCrypt</a></dd><br/>
 <a href="strangeness/">minecraft strangeness</a><br/>
 Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
 <a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb">All of my screenshots for Minecraft</a><br/>
