Update index.html with reference to Astro.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 <body>
 A website listing games that Papa Birl plays.<br/>
-<a href="3DS/index.html">3DS</a><br/>
-<a href="android">Android</a><br/>
-<a href="minecraft">minecraft</a><br/>
-<br/>
+- <a href="3DS/index.html">3DS</a><br/>
+- <a href="android">Android</a><br/>
+- <a href="minecraft">minecraft</a><br/>
+<br/><br/>
+
+(<i>Some content migrated from my old https://astro.temple.edu/~sbirl/ website.</i>) <br/><br/>
 
 gmail: Ogal.Finklestein
 
