Update index.html with robots meta tag.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta name="robots"                   content="Follow, Index, NoArchive">
 <meta name="google-site-verification" content="D5xDwsgdQvcsRalYDcLkiMNxY6i_LQ1wsbCuX8z747s" />
-<title>Papa Birl</title>
+<title>Papa Birl &amp; Games</title>
 </head>
 
 <body>
@@ -10,7 +11,7 @@ A website listing games that Papa Birl plays.<br/>
 - <a href="3DS/index.html">3DS</a><br/>
 - <a href="android">Android</a><br/>
 - <a href="minecraft">minecraft</a><br/>
-<br/><br/>
+<br/>
 
 (<i>Some content migrated from my old https://astro.temple.edu/~sbirl/ website.</i>) <br/><br/>
 
