lots more changes

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Papa Birl on Minecraft</title>
+<title>Papa_Birl and Minecraft</title>
+<meta name="robots"             content="Follow, Index, Archive">
+<meta name="keywords"           content="Papa Birl, Papa_Birl, Minecraft, Hypixel">
+<meta name="description"        content="Papa_Birl's Minecraft adventures as of 2021-Dec-02.">
+<meta name="author"             content="Scott Birl">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="Pragma"       content="no-cache">
+<meta http-equiv="refresh"      content="86400">
 </head>
 
 <body>
 <a href="..">..</a>
 <br/><br/>
-<!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
-<a href="https://plancke.io/hypixel/player/stats/Papa_Birl" target="_blank"><img src="https://gen.plancke.io/exp/Papa_Birl.png" style="width:300px;" /></a><br/>
-<a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f" target="_blank">My Hypixel profile</a><br/>
-  <dd><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange" target="_blank">SkyCrypt</a></dd><br/>
+<div id="profiles">
+  <div id="avatar">
+    <a href="https://crafatar.com/" target="_blank"><img src="https://crafatar.com/renders/body/8fa7462d4d044dc2a9d4031827db867f?overlay"></a>
+    <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
+  </div>
+  
+  <div id="URLs">
+    <a href="https://plancke.io/hypixel/player/stats/Papa_Birl" target="_blank"><img src="https://gen.plancke.io/exp/Papa_Birl.png" style="width:500px;" /></a><br/>
+    <a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f" target="_blank">My Hypixel profile</a><br/>
+      <dd><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange" target="_blank">SkyCrypt</a></dd><br/>
+  </div>
 
-<a href="strangeness/">minecraft strangeness</a><br/>
-Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
+    <a href="strangeness/">minecraft strangeness</a><br/>
+    Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
+</div>
+<br/>
+
 <a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb" target="_blank">All of my screenshots for Minecraft</a><br/>
 </body>
 </html>
