Re-workin' the page.

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -9,28 +9,37 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Pragma"       content="no-cache">
 <meta http-equiv="refresh"      content="86400">
+
+<style>
+table      {display:grid; }
+#banner    {width:100%; text-align:center; }
+.minecraft {font-family:monospace; text-transform:uppercase; }
+.plancke   {width:500px; }
+</style>
 </head>
 
 <body>
 <a href="..">..</a>
 <br/><br/>
-<div id="profiles">
-  <div id="avatar">
-    <a href="https://crafatar.com/" target="_blank"><img src="https://crafatar.com/renders/body/8fa7462d4d044dc2a9d4031827db867f?overlay"></a>
+<div id="banner"><span>Papa_Birl's World of</span><br/><h1 class="minecraft">Minecraft</h1></div>
+
+<table id="profiles" border="0" cellpadding="3" cellspacing="0">
+  <td colspan="1">  
+    <a href="https://crafatar.com/" target="_blank"><img src="https://crafatar.com/renders/body/8fa7462d4d044dc2a9d4031827db867f?overlay" title="PNG image of Papa_Birl's self-made Minecraft avatar courtesy of Crafatar." alt="PNG image."></a>
     <!-- iframe src="https://namemc.com/skin/7d19de8c1dd71475"></iframe> -->
-  </div>
+  </td>
   
-  <div id="URLs">
-    <a href="https://plancke.io/hypixel/player/stats/Papa_Birl" target="_blank"><img src="https://gen.plancke.io/exp/Papa_Birl.png" style="width:500px;" /></a><br/>
+  <td colspan="1" style="vertical-align:top;">
+    <a href="https://plancke.io/hypixel/player/stats/Papa_Birl" target="_blank"><img class="plancke" src="https://gen.plancke.io/exp/Papa_Birl.png" title="Image of Papa_Birl's Hypixel level is courtesy of plancke.io." alt="image."/></a><br/>
     <a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f" target="_blank">My Hypixel profile</a><br/>
       <dd><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange" target="_blank">SkyCrypt</a></dd><br/>
-  </div>
-
-    <a href="strangeness/">minecraft strangeness</a><br/>
-    Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a><br/>
-</div>
+  </td>
+  <tr/>
+  <td colspan="2"><a href="strangeness/">minecraft strangeness</a></td> <tr/>
+  <td colspan="2">Papa Birl's growing list of Minecraft <a href="seeds.html">seeds</a></td> <tr/>
+  <td colspan="2"><a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb" target="_blank">All of my screenshots for Minecraft</a></td><tr/>
+</table>
 <br/>
 
-<a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb" target="_blank">All of my screenshots for Minecraft</a><br/>
 </body>
 </html>
