New Skyblock profile added.

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -32,7 +32,10 @@ table      {display:grid; }
   <td colspan="1" style="vertical-align:top;">
     <a href="https://plancke.io/hypixel/player/stats/Papa_Birl" target="_blank"><img class="plancke" src="https://gen.plancke.io/exp/Papa_Birl.png" title="Image of Papa_Birl's Hypixel level is courtesy of plancke.io." alt="image."/></a><br/>
     <a href="https://hypixel.net/player/8fa7462d4d044dc2a9d4031827db867f" target="_blank">My Hypixel profile</a><br/>
-      <dd><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange" target="_blank">SkyCrypt</a></dd><br/>
+    <ul>
+      <li><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Orange" target="_blank">Standard SkyBlock (SkyCrypt)</a></li>
+      <li><a href="https://sky.shiiyu.moe/stats/Papa_Birl/Blueberry" target="_blank">Stranded SkyBlock (SkyCrypt)</a></li>
+      <br/>
   </td>
   <tr/>
   <td colspan="2"><a href="strangeness/">minecraft strangeness</a></td> <tr/>
