--- a/minecraft/seeds.html
+++ b/minecraft/seeds.html
@@ -32,7 +32,22 @@ function CreateURLs(seed)
 
 <body>
 <a href=".">.</a> <a href="..">..</a><br/><br/>
-<b>Minecraft Seeds </b>Ive picked out<b> that contain the following with 2000 blocks:</b><br/>
+
+<b>Minecraft Seeds</b> (1.18 and later) Ive picked out<b> that contain the following with 2000 blocks:</b><br/>
+(<b>*</b> <i>All biomes within 2000 blocks according to seedhunt.net</i>)
+<br/>
+<table border="1" cellpadding="3" cellspacing="0" id="Within-2000-blocks">
+<thead>
+<td><i>Click on a seed number for URLs</i></td>
+    <th>All biomes *</th><th>Desert Temples</th><th>Igloos with Basement</th><th>Jungle Temples</th><th>Ocean Monuments</th><th>Pillager Outposts</th><th>Shipwrecks</th><th>Strongholds</th><th>Villages (regular)</th><th>Witch Huts</th><th>Woodland Mansions</th><th>Zombie Villages</th><tr/>
+</thead><tr/>
+<tr><th onclick="CreateURLs()"    id="">&#960; ###</th>
+    <td>?</td>          <td>?</td>             <td>?</td>                   <td>?</td>             <td>?</td>              <td>?</td>                <td>?</td>        <td>?</td>          <td>?</td>                <td>?</td>         <td>?</td>                <td>?</td></tr>
+</table>
+<br/>
+
+
+Minecraft Seeds <b>up to, including 1.17.1,</b> Ive picked out<b> that contain the following with 2000 blocks:</b><br/>
 (<b>*</b> <i>All biomes within 2000 blocks according to seedhunt.net</i>)
 <br/>
 <table border="1" cellpadding="3" cellspacing="0" id="Within-2000-blocks">
