--- a/minecraft/seeds.html
+++ b/minecraft/seeds.html
@@ -4,7 +4,7 @@
 <title>Papa Birl's Compendium of Minecraft Seeds</title>
 <meta name="robots"             content="Follow, Index, NoArchive">
 <meta name="author"             content="S.A. Birl">
-<meta name="description"        content="Papa Birl's Compendium of Minecraft Seeds.  Updated: 2021-Dec-01.">
+<meta name="description"        content="Papa Birl's Compendium of Minecraft Seeds.  Updated: 2022-Jun-28.">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style>
 body                                 { background-color:#EeE; }
@@ -25,7 +25,7 @@ thead                                { position:sticky; top:0; background-color:
 <script type="text/javascript" language="JavaScript">
 function CreateURLs(seed)
 {
-	document.getElementById(seed).innerHTML="" + seed + "<br/><a href='https://www.chunkbase.com/apps/seed-map#" + seed + "' target='_blank'>Chunkbase</a><br/><a href='https://seedhunt.net/seed/" + seed + "' target='_blank'>Seedhunt</a>"
+	document.getElementById(seed).innerHTML="" + seed + "<br/><a href='https://www.chunkbase.com/apps/seed-map#" + seed + "' target='_blank'>Chunkbase</a>"
 }
 </script>
 </head>
@@ -34,21 +34,32 @@ function CreateURLs(seed)
 <a href=".">.</a> <a href="..">..</a><br/><br/>
 
 <b>Minecraft Seeds</b> (1.18 and later) Ive picked out<b> that contain the following with 2000 blocks:</b><br/>
-(<b>*</b> <i>All biomes within 2000 blocks according to seedhunt.net</i>)
 <br/>
 <table border="1" cellpadding="3" cellspacing="0" id="Within-2000-blocks">
 <thead>
 <td><i>Click on a seed number for URLs</i></td>
     <th>All biomes *</th><th>Desert Temples</th><th>Igloos with Basement</th><th>Jungle Temples</th><th>Ocean Monuments</th><th>Pillager Outposts</th><th>Shipwrecks</th><th>Strongholds</th><th>Villages (regular)</th><th>Witch Huts</th><th>Woodland Mansions</th><th>Zombie Villages</th><tr/>
 </thead><tr/>
+<tr><th onclick="CreateURLs(-2586812457000895612)"    id="-2586812457000895612">&#960; ###</th>
+        <!-- All biomes? -->    <td>N</td>
+	<!-- Ancient City -->   <td>2</td>   <!-- Desert Temples -->    <td>2</td>   <!-- Igloos Basements -->  <td>2</td>
+	<!-- Jungle Temples --> <td>0</td>   <!-- Ocean Monuments -->   <td>5</td>   <!-- Pillager Outposts --> <td>3</td>
+	<!-- Shipwrecks -->     <td>9+</td>  <!-- Strongholds END -->   <td>1</td>   <!-- Villages (reg) -->    <td>9+</td>
+	<!-- Witch Huts -->     <td>1</td>   <!-- Woodland Mansions --> <td>2</td>   <!-- Zombie Villages -->   <td>0</td>
 <tr><th onclick="CreateURLs()"    id="">&#960; ###</th>
-    <td>?</td>          <td>?</td>             <td>?</td>                   <td>?</td>             <td>?</td>              <td>?</td>                <td>?</td>        <td>?</td>          <td>?</td>                <td>?</td>         <td>?</td>                <td>?</td></tr>
+	</tr>
+        <!-- All biomes? -->    <td>?</td>
+	<!-- Ancient City -->   <td>?</td>   <!-- Desert Temples -->    <td>?</td>   <!-- Igloos Basements -->  <td>?</td>
+	<!-- Jungle Temples --> <td>?</td>   <!-- Ocean Monuments -->   <td>?</td>   <!-- Pillager Outposts --> <td>?</td>
+	<!-- Shipwrecks -->     <td>?</td>   <!-- Strongholds END -->   <td>?</td>   <!-- Villages (reg) -->    <td>?</td>
+	<!-- Witch Huts -->     <td>?</td>   <!-- Woodland Mansions --> <td>?</td>   <!-- Zombie Villages -->   <td>?</td>
+	</tr>
 </table>
 <br/>
 
 
 Minecraft Seeds <b>up to, including 1.17.1,</b> Ive picked out<b> that contain the following with 2000 blocks:</b><br/>
-(<b>*</b> <i>All biomes within 2000 blocks according to seedhunt.net</i>)
+(<b>*</b> <i>All biomes within 2000 blocks according to <b>obsolete</b> seedhunt.net</i>)
 <br/>
 <table border="1" cellpadding="3" cellspacing="0" id="Within-2000-blocks">
 <thead>
