--- a/minecraft/seeds.html
+++ b/minecraft/seeds.html
@@ -38,16 +38,21 @@ function CreateURLs(seed)
 <table border="1" cellpadding="3" cellspacing="0" id="Within-2000-blocks">
 <thead>
 <td><i>Click on a seed number for URLs</i></td>
-    <th>All biomes *</th><th>Desert Temples</th><th>Igloos with Basement</th><th>Jungle Temples</th><th>Ocean Monuments</th><th>Pillager Outposts</th><th>Shipwrecks</th><th>Strongholds</th><th>Villages (regular)</th><th>Witch Huts</th><th>Woodland Mansions</th><th>Zombie Villages</th><tr/>
+<th>All biomes *</th>
+	<th>Ancient Cities</th>			<th>Desert Temples</th>			<th>Igloos with Basement</th>
+	<th>Jungle Temples</th>			<th>Ocean Monuments</th>		<th>Pillager Outposts</th>
+	<th>Shipwrecks</th>			<th>Strongholds</th>			<th>Villages (regular)</th>
+	<th>Witch Huts</th>			<th>Woodland Mansions</th>		<th>Zombie Villages</th>
+	<tr/>
 </thead><tr/>
-<tr><th onclick="CreateURLs(-2586812457000895612)"    id="-2586812457000895612">&#960; ###</th>
+<tr><th onclick="CreateURLs(-2586812457000895612)"    id="-2586812457000895612">-2586812457000895612</th>
         <!-- All biomes? -->    <td>N</td>
 	<!-- Ancient City -->   <td>2</td>   <!-- Desert Temples -->    <td>2</td>   <!-- Igloos Basements -->  <td>2</td>
 	<!-- Jungle Temples --> <td>0</td>   <!-- Ocean Monuments -->   <td>5</td>   <!-- Pillager Outposts --> <td>3</td>
 	<!-- Shipwrecks -->     <td>9+</td>  <!-- Strongholds END -->   <td>1</td>   <!-- Villages (reg) -->    <td>9+</td>
 	<!-- Witch Huts -->     <td>1</td>   <!-- Woodland Mansions --> <td>2</td>   <!-- Zombie Villages -->   <td>0</td>
-<tr><th onclick="CreateURLs()"    id="">&#960; ###</th>
 	</tr>
+<tr><th onclick="CreateURLs()"    id="">&#960; ###</th>
         <!-- All biomes? -->    <td>?</td>
 	<!-- Ancient City -->   <td>?</td>   <!-- Desert Temples -->    <td>?</td>   <!-- Igloos Basements -->  <td>?</td>
 	<!-- Jungle Temples --> <td>?</td>   <!-- Ocean Monuments -->   <td>?</td>   <!-- Pillager Outposts --> <td>?</td>
