Update index.html to memorialize Techoblade.  RIP.

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -4,7 +4,7 @@
 <title>Papa_Birl and Minecraft</title>
 <meta name="robots"             content="Follow, Index, Archive">
 <meta name="keywords"           content="Papa Birl, Papa_Birl, Minecraft, Hypixel">
-<meta name="description"        content="Papa_Birl's Minecraft adventures as of 2021-Dec-02.">
+<meta name="description"        content="Papa_Birl's Minecraft adventures as of 2022-Jul-01.">
 <meta name="author"             content="Scott Birl">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Pragma"       content="no-cache">
@@ -43,6 +43,12 @@ table      {display:grid; }
   <td colspan="2"><a href="https://1drv.ms/f/s!AuY9AWhzxDmjhEsz27Nvou2jYiwb" target="_blank">All of my screenshots for Minecraft</a></td><tr/>
 </table>
 <br/>
+<br/>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">R.I.P. Technoblade. My youngest son and I loved your content. #TechnobladeNeverDies #techno #Technothepig</p>&mdash; Papa Birl <a href="https://twitter.com/ScottBirl/status/1542862075906629634">July 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br/>
+<a href="https://feedback.minecraft.net/hc/en-us/search?utf8=%E2%9C%93&query=Technoblade">Vote to get Techoblade immortalized into Minecraft</a>
+<br/>
+<br/>
+
 
 </body>
 </html>
