Update index.html to memorialize Techoblade. RIP.

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -44,8 +44,8 @@ table      {display:grid; }
 </table>
 <br/>
 <br/>
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">R.I.P. Technoblade. My youngest son and I loved your content. #TechnobladeNeverDies #techno #Technothepig</p>&mdash; Papa Birl <a href="https://twitter.com/ScottBirl/status/1542862075906629634">July 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br/>
-<a href="https://feedback.minecraft.net/hc/en-us/search?utf8=%E2%9C%93&query=Technoblade">Vote to get Techoblade immortalized into Minecraft</a>
+<a href="https://feedback.minecraft.net/hc/en-us/search?utf8=%E2%9C%93&query=Technoblade">Vote to get Techoblade immortalized into Minecraft</a><br/>
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">R.I.P. Technoblade. My youngest son and I loved your content. #TechnobladeNeverDies #techno #Technothepig</p>&mdash; Papa Birl <a href="https://twitter.com/ScottBirl/status/1542862075906629634">July 1, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br/>
 <br/>
 
