--- a/3DS/Etrian_Odyssey_Guild_Cards.html
+++ b/3DS/Etrian_Odyssey_Guild_Cards.html
@@ -19,7 +19,7 @@ table 	{ border:solid 0px #000; }
 </head>
 
 <body>
-<a href=".">.</a> &nbsp; http://tinyurl.com/EOGcards
+<a href=".">.</a>
 <br/><br/>
 <table cellpadding="1" cellspacing="0">
 <th colspan="3">Etrian Odyssey Untold: The Millennium Girl</th></tr>
@@ -72,6 +72,6 @@ Pooka D.O.E. hunting in the Mystery Dungeon's Thunderous Cave
 	will 'Pain Trade' back to the Pooka, killing it.
 </ul>
 <br/>
-<a href="http://tinyurl.com/EOGcards" target="_blank">http://tinyurl.com/EOGcards</a>
+
 </body>
 </html>
