Update meta tags

--- a/3DS/Etrian_Odyssey_Guild_Cards.html
+++ b/3DS/Etrian_Odyssey_Guild_Cards.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <title>Papa Birl's Etrian Odyssey Guild Cards QR codes</title>
-<meta name="robots"             content="Follow, Index, NoArchive">
-<meta name="keywords"           content="Etrian, Guild Cards, QR, Birl, Ogal Finklestein">
+<meta name="robots"             content="Follow, Index, Archive">
+<meta name="keywords"           content="Etrian Odyssey, Guild, Cards, QR, Birl, Ogal Finklestein">
 <meta name="description"        content="Papa Birl's Etrian Odyssey Guild Cards. QR Codes. . . . . . . 2019-Jan-14.">
 <meta name="author"             content="S.A. Birl">
 
